fix z-index on avatar so it can be clicked

--- a/resources/less/chat.less
+++ b/resources/less/chat.less
@@ -231,6 +231,7 @@ body {
     position: absolute;
     top: 1em;
     right: 1em;
+    z-index: 5;
   }
   .user-modal {
     background: #333;
